<?xml version="1.0"?>
<package format="2">
  <name>unity_bringup</name>
  <version>1.2.7</version>
  <description>
      Unity Bringup to test rgbd simulated Camera.
  </description>


  <maintainer email="panagiotis.angelakis.robot@gmail.com">Panos</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>roslaunch</test_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rostopic</exec_depend>

  <depend>roscpp</depend>


  <export>
  </export>
</package>
